Remove header comment from generated output file in case of JSON export.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,8 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
+application.title=csvconv
+application.vendor=tombenke
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,16 +23,21 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/csvconv.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.csv2xml-src=src
 file.reference.xom-1.2b1.jar=lib/xom-1.2b1.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.xom-1.2b1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -46,9 +56,16 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=defaut
+jnlp.offline-allowed=false
+jnlp.signed=false
+main.class=uk.co.dpawson.CSVToXML
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+no.dependencies=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
