--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 compile.on.save=true
-file.reference.csv2xml-src=/home/benke/NetBeansProjects/csvconv/src
-file.reference.xom-1.2b1.jar=/home/benke/NetBeansProjects/csvconv/lib/xom-1.2b1.jar
-user.properties.file=/home/benke/.netbeans/6.8/build.properties
+do.depend=false
+do.jar=true
+file.reference.csv2xml-src=/home/tombenke/NetBeansProjects/csvconv/src
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/home/tombenke/.netbeans/6.9/build.properties
